--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,6 +14,14 @@
   "background": {
     "scripts": ["build/background.js"]
   },
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": false
+  },
+  "browser_action": {
+    "default_icon": "assets/icon-16.png",
+    "default_popup": "popup.html"
+  },
   "icons": {
     "16": "assets/icon-16.png",
     "128": "assets/icon-128.png"
