--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^1.2.0"
+  },
+  "dependencies": {
+    "bootstrap-sass": "^3.3.6"
   }
 }
