--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-sass": "^1.2.0"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.6"
+    "bootstrap-sass": "^3.3.6",
+    "bootstrap-slider": "^9.1.1",
+    "spectrum-colorpicker": "^1.8.0",
+    "tinycolor2": "^1.4.1"
   }
 }
